--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "dev": "vite",
     "deploy": "gh-pages -d dist"
   },
-
-"homepage": "https://github.com/bclproduction-tech/product.git",
-
+  "homepage": "https://github.com/bclproduction-tech/product.git",
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
@@ -60,7 +58,7 @@
     "react-resizable-panels": "2.1.7",
     "react-responsive-masonry": "2.7.1",
     "react-router": "7.13.0",
-    "react-slick": "0.31.0",
+    "react-slick": "^0.31.0",
     "recharts": "2.15.2",
     "slick-carousel": "^1.8.1",
     "sonner": "2.0.3",
@@ -70,6 +68,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "4.7.0",
     "gh-pages": "^6.3.0",
     "tailwindcss": "4.1.12",
